Fix squeezed elements, align header with content (#1087)
* Break to mobile menu sooner

* Don't let logo shrink

* Align pages with header

--- a/app/recordtransfer/static/recordtransfer/css/base/base.css
+++ b/app/recordtransfer/static/recordtransfer/css/base/base.css
@@ -30,14 +30,14 @@ body {
     padding: 18px 12px 18px 12px;
 }
 
-.main-header-content,
 .main-content {
-    width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
 
 .main-header-content {
+    margin-left: auto;
+    margin-right: auto;
     padding: 10px 0px;
 }
 
